# insights-app

./: .gitignore  README.md  docker-compose.yml  start_app.sh  stop_app.sh
frontend/: .env_template  Dockerfile  README.md  pyproject.toml
frontend/frontend/: __init__.py  config.py  main.py
frontend/frontend/chat/: core.py
frontend/frontend/metrics/: core.py
frontend/frontend/utils/: api.py
llm/: .env_template  Dockerfile  README.md  pyproject.toml
llm/llm/: __main__.py  agent_server.py  config.py
llm/llm/agents/: __init__.py  executor.py  tools.py
mcp_server/: .env_template  Dockerfile  README.md  pyproject.toml
mcp_server/mcp_server/: __main__.py
mcp_server/mcp_server/core/: agents.py  database.py
mcp_server/mcp_server/core/config/: settings.py
neo4j/: Dockerfile  docker-entrypoint.sh  run-seed.sh  seed.cypher
