[project]
name = "frontend"
version = "0.1.0"
description = "Frontend Layer for insights application"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "streamlit>=1.31.1,<2",
    "requests",
    "python-dotenv",
    "protobuf",
    "cachetools",
    "typing_extensions",
    "watchdog",
    "blinker",
    "pandas",
    "numpy",
    "validators",
    "plotly",
    "altair",
    "gitpython",
    "rich",
    "click",
    "semver",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
