[project]
name = "llm"
version = "0.1.0"
description = "LLM-powered insights analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.1",
    "pydantic>=2.6.3",
    "pydantic-settings>=2.2.1",
    "python-dotenv>=1.0.1",
    "openai>=1.14.0",
    "langchain>=0.1.12",
    "langchain-openai>=0.0.8",
    "typing-extensions>=4.10.0",
    "aiohttp>=3.9.3",
    "anyio>=4.4.0",
    "click>=8.1.7",
    "fastmcp>=2.0.0",
    
    # HTTP and networking
    "httpx>=0.28.1",
    "httpx-sse>=0.4.0",
    "requests>=2.32.3",
    "h11>=0.14.0",
    "starlette>=0.46.2",
    "aiohappyeyeballs>=2.6.1",
    "aiosignal>=1.3.2",
    "httpcore>=1.0.8",
    "multidict>=6.4.3",
    "websockets>=15.0.1",
    "yarl>=1.20.0",
    
    # LangChain dependencies
    "langchain-core>=0.3.55",
    "langchain-text-splitters>=0.3.8",
    "langsmith>=0.3.33",
    
    # OpenAI dependencies
    "openai-agents>=0.0.12",
    "tiktoken>=0.9.0",
    
    # MCP dependencies
    "mcp-agent>=0.0.17",
    "mcp>=1.6.0",
    "fastmcp>=2.2.2",
    "sse-starlette>=2.3.3",
    
    # Database
    "neo4j>=5.17.0",
    "sqlalchemy>=2.0.40",
    
    # Utility dependencies
    "pydantic-core>=2.33.1",
    "typing-inspection>=0.4.0",
    "annotated-types>=0.7.0",
    "sniffio>=1.3.1",
    "certifi>=2025.1.31",
    "charset-normalizer>=3.4.1",
    "colorama>=0.4.6",
    "deprecated>=1.2.18",
    "distro>=1.9.0",
    "docstring-parser>=0.16",
    "exceptiongroup>=1.2.2",
    "frozenlist>=1.6.0",
    "googleapis-common-protos>=1.70.0",
    "griffe>=1.7.3",
    "idna>=3.10",
    "importlib-metadata>=8.6.1",
    "instructor>=1.7.9",
    "jinja2>=3.1.6",
    "jiter>=0.8.2",
    "joblib>=1.4.2",
    "jsonpatch>=1.33",
    "jsonpointer>=3.0.0",
    "markdown-it-py>=3.0.0",
    "markupsafe>=3.0.2",
    "mdurl>=0.1.2",
    "numpy>=2.2.5",
    "openapi-pydantic>=0.5.1",
    "opentelemetry-api>=1.32.1",
    "opentelemetry-distro>=0.53b1",
    "opentelemetry-exporter-otlp-proto-common>=1.32.1",
    "opentelemetry-exporter-otlp-proto-http>=1.32.1",
    "opentelemetry-instrumentation>=0.53b1",
    "opentelemetry-proto>=1.32.1",
    "opentelemetry-sdk>=1.32.1",
    "opentelemetry-semantic-conventions>=0.53b1",
    "orjson>=3.10.16",
    "packaging>=24.2",
    "prompt-toolkit>=3.0.51",
    "propcache>=0.3.1",
    "protobuf>=5.29.4",
    "pygments>=2.19.1",
    "pyyaml>=6.0.2",
    "regex>=2024.11.6",
    "requests-toolbelt>=1.0.0",
    "rich>=13.9.4",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "shellingham>=1.5.4",
    "tenacity>=9.1.2",
    "threadpoolctl>=3.6.0",
    "tqdm>=4.67.1",
    "typer>=0.15.2",
    "types-requests>=2.32.0.20250328",
    "urllib3>=2.4.0",
    "wcwidth>=0.2.13",
    "wrapt>=1.17.2",
    "zipp>=3.21.0",
    "zstandard>=0.23.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "black>=24.2.0",
    "isort>=5.13.2",
    "ruff>=0.3.0"
]
