[project]
name = "mcp_server"
version = "0.1.0"
description = "FastMCP-based insights analysis tool"
authors = [{name = "Your Name", email = "your.email@example.com"}]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "fastmcp>=2.0.0",
    "mcp>=1.6.0",
    "neo4j>=5.14.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typing-inspection>=0.4.0",
    "pydantic-core>=2.14.6",
    "typing-extensions>=4.8.0",
    "annotated-types>=0.7.0",
    "click>=8.0.0",
    "python-dotenv",
    "openai",
    "fastapi",
    "uvicorn",
    "sse-starlette",
    "aiohttp",
    "anyio",
    "httpx",
    "starlette",
    "sniffio",
    "idna",
    "rich",
    "pygments",
    "exceptiongroup",
    "httpx_sse",
    "websockets",
    "h11" 
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
